--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,48 @@
-flask
-flask-restful
-flask-migrate
-flask-sqlalchemy
-flask-marshmallow
-flask-jwt-extended
-marshmallow-sqlalchemy
-python-dotenv
-passlib
-tox
-celery
-gunicorn
-psycopg2-binary
-SQLAlchemy-Utils
-celery
+alembic==1.0.5
+amqp==2.3.2
+aniso8601==4.0.1
+billiard==3.5.0.5
+blinker==1.4
+celery==4.2.1
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+elasticsearch==6.3.1
+filelock==3.0.10
+Flask==1.0.2
+Flask-JWT-Extended==3.15.0
+flask-marshmallow==0.9.0
+Flask-Migrate==2.3.1
+Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.3.2
+Flask-WhooshAlchemy==0.56
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+kombu==4.2.2.post1
+Mako==1.0.7
+MarkupSafe==1.1.0
+marshmallow==2.17.0
+marshmallow-sqlalchemy==0.15.0
+-e git+https://github.com/kristus123/erestetelessapaippi.git@e7b1008c714d1ffb35b43426c8215b33a97596d2#egg=myapi
+passlib==1.7.1
+pluggy==0.8.0
+psycopg2-binary==2.7.6.1
+py==1.7.0
+PyJWT==1.7.1
+python-dateutil==2.7.5
+python-dotenv==0.10.1
+python-editor==1.0.3
+pytz==2018.9
+requests==2.21.0
+six==1.12.0
+SQLAlchemy==1.2.15
+SQLAlchemy-Utils==0.33.10
+toml==0.10.0
+tox==3.6.1
+urllib3==1.24.1
+vine==1.2.0
+virtualenv==16.2.0
+Werkzeug==0.14.1
+Whoosh==2.7.4
